# AESBuilder

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  build_so.py  config.json  settings.gradle.kts  使用说明.md
.claude/: settings.local.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/example/myapp/: MainActivity.kt  SignatureUtil.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
lib_module/: CMakeLists.txt  build.gradle.kts
lib_module/src/main/cpp/: JNIEncrypt.c  aes.c  aes.h  base64.c  check_emulator.c  checksignature.c  checksignature.h  md5.c  md5.h
lib_module/src/main/java/com/example/myapp/utils/: MyEncrypt.java
templates/: CMakeLists.txt.tmpl  JNIEncrypt.c.tmpl  JniEncrypt.java.tmpl  MainActivity.kt.tmpl  build.gradle.kts.tmpl  checksignature.h.tmpl
